fix issue w/ updating colors

--- a/entities/templates/last_scene.yaml
+++ b/entities/templates/last_scene.yaml
@@ -8,3 +8,12 @@
     unique_id: b1b1fb2e-c247-4396-88cc-91f919391207
     state: "{{ states.scene | sort(attribute='state', reverse=true) | map(attribute='name') | first }}"
     icon: "{{ states.scene | sort(attribute='state', reverse=true) | map(attribute='attributes') | map(attribute='icon') | first }}"
+    attributes:
+      color: >-
+        {% set s = states.scene | sort(attribute='state', reverse=true) | map(attribute='name') | first %}
+        {% if s == 'Home' %} green
+        {% elif s == 'Away' %} red
+        {% elif s == 'Night' %} purple
+        {% elif s == 'Vacation' %} blue
+        {% else %} grey
+        {% endif %}
