--- a/ui_lovelace_minimalist/dashboard/views/house.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/house.yaml
@@ -75,6 +75,8 @@ cards:
       include:
         - attributes:
             device_class: battery
+      exclude:
+        - domain: binary_sensor
 
   - type: custom:auto-entities
     card:
