--- a/entities/templates/last_scene.yaml
+++ b/entities/templates/last_scene.yaml
@@ -6,11 +6,11 @@
 - sensor:
   - name: Last scene
     unique_id: b1b1fb2e-c247-4396-88cc-91f919391207
-    state: "{{ states.scene | sort(attribute='state', reverse=true) | map(attribute='name') | first }}"
-    icon: "{{ states.scene | sort(attribute='state', reverse=true) | map(attribute='attributes') | map(attribute='icon') | first }}"
+    state: "{{ states.scene | sort(attribute='state', reverse=true) | map(attribute='name') | first | default('Unknown') }}"
+    icon: "{{ states.scene | sort(attribute='state', reverse=true) | map(attribute='attributes') | map(attribute='icon') | first | default('mdi:cancel') }}"
     attributes:
       color: >-
-        {% set s = states.scene | sort(attribute='state', reverse=true) | map(attribute='name') | first %}
+        {% set s = states.scene | sort(attribute='state', reverse=true) | map(attribute='name') | first | default('Unknown') %}
         {% if s == 'Home' %} green
         {% elif s == 'Away' %} red
         {% elif s == 'Night' %} purple
