--- a/automations/utilities/washer_and_dryer.yaml
+++ b/automations/utilities/washer_and_dryer.yaml
@@ -12,19 +12,32 @@ trigger:
     id: washer_on
     above: 20
     for: "00:00:10"
+    variables:
+      input_entity: input_boolean.washing_machine_on
 
   - platform: numeric_state
     entity_id: sensor.clothes_washer_13_1min
     below: 2
     for: "00:20:00" # handle pause in soak
     id: washer_off
+    variables:
+      input_entity: input_boolean.washing_machine_on
 
-  - platform: state
-    entity_id:
-      - binary_sensor.dryer_on
-    from: "off"
-    to: "on"
+  - platform: numeric_state
+    entity_id: sensor.dryer_1_1min
+    above: 500
+    for: "00:00:10"
     id: dryer_on
+    variables:
+      input_entity: input_boolean.dryer_on
+
+  - platform: numeric_state
+    entity_id: sensor.dryer_1_1min
+    below: 5
+    for: "00:00:10"
+    id: dryer_off
+    variables:
+      input_entity: input_boolean.dryer_on
 
   - platform: device
     type: opened
@@ -39,32 +52,31 @@ action:
           - condition: trigger
             id:
               - washer_on
+              - dryer_on
           - condition: template
-            value_template: '{{ states("input_boolean.washing_machine_on")  == "off" }}'
+            value_template: '{{ states(input_entity)  == "off" }}'
         sequence:
           - service: input_boolean.turn_on
             target:
-              entity_id: input_boolean.washing_machine_on
+              entity_id: "{{ input_entity }}"
+          - condition: trigger
+            id:
+              - dryer_on
+          - service: alert.turn_off
+            target:
+              entity_id: alert.washing_machine
 
       - conditions:
           - condition: trigger
             id:
               - washer_off
+              - dryer_off
           - condition: template
-            value_template: '{{ states("input_boolean.washing_machine_on")  == "on" }}'
+            value_template: '{{ states(input_entity)  == "on" }}'
         sequence:
           - service: input_boolean.turn_off
             target:
-              entity_id: input_boolean.washing_machine_on
-
-      - conditions:
-          - condition: trigger
-            id:
-              - dryer_on
-        sequence:
-          - service: alert.turn_off
-            target:
-              entity_id: alert.washing_machine
+              entity_id: "{{ input_entity }}"
 
       - conditions:
           - condition: trigger
