--- a/entities/alerts/dryer.yaml
+++ b/entities/alerts/dryer.yaml
@@ -5,7 +5,7 @@
 
 dryer:
   name: Dryer done
-  entity_id: binary_sensor.dryer_on
+  entity_id: input_boolean.dryer_on
   title: 🧦 Dryer done!
   message: false
   done_message: clear_notification
