--- a/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
@@ -230,3 +230,11 @@ cards:
     variables:
       - sensor_prefix: office
       - node_number: 20
+
+  - type: custom:decluttering-card
+    template: z_wave_single_relay_no_scene
+    variables:
+      - sensor_prefix: master_bedroom_fan
+      - sensor_domain: relay
+      - name: Fan Relay
+      - node_number: 24
