--- a/automations/lights/tv-led-off.yaml
+++ b/automations/lights/tv-led-off.yaml
@@ -6,7 +6,7 @@ alias: Turn off TV LED when TV turned off
 id: 16f855bf-9b9b-4028-93b8-17fd0c3dd6a2
 
 trigger:
-- platform: state
+  platform: state
   entity_id:
     - media_player.fire_tv_192_168_68_107
   from:
@@ -17,8 +17,8 @@ trigger:
   to: "off"
 
 action:
-- parallel:
-  - service: script.sound_bar_power
-  - service: light.turn_off
-    target:
-      entity_id: light.tv_led
+  parallel:
+    - service: script.sound_bar_power
+    - service: light.turn_off
+      target:
+        entity_id: light.tv_led
